[gd_scene load_steps=3 format=3 uid="uid://b0n3r4pk8tjt6"]

[ext_resource type="Script" uid="uid://q5ub13n47f5r" path="res://components/hud/bottom_right_hud.gd" id="1_ql87q"]
[ext_resource type="Texture2D" uid="uid://b11akikuafcgm" path="res://assets/icons/icon_weapon_remington870.png" id="2_t4xdl"]

[node name="BottomRightHud" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_ql87q")

[node name="WeaponContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -22.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="WeaponContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="WeaponIcon" type="TextureRect" parent="WeaponContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_t4xdl")
expand_mode = 1

[node name="AmmoContainer" type="HBoxContainer" parent="WeaponContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="AmmoLabel" type="Label" parent="WeaponContainer/VBoxContainer/AmmoContainer"]
layout_mode = 2
text = "30"
horizontal_alignment = 1

[node name="SeparatorLabel" type="Label" parent="WeaponContainer/VBoxContainer/AmmoContainer"]
layout_mode = 2
text = " | "
horizontal_alignment = 1

[node name="ReserveAmmoLabel" type="Label" parent="WeaponContainer/VBoxContainer/AmmoContainer"]
layout_mode = 2
text = "âˆž"
horizontal_alignment = 1
